#1286 Java 9 support